<resources>
    <string name="app_name">Fives</string>
    <string name="save">Speichern</string>
    <string name="delete">Löschen</string>
    <string name="info">Info</string>
    <string name="name">Name</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="overview">Übersicht</string>
    <string name="website">Webseite</string>
    <string name="settings">Einstellungen</string>
    <string name="symbols">Symbole</string>
    <string name="note">Notizen</string>
    <string name="import_str">Import</string>
    <string name="export">Export</string>
    <string name="set">Einstellen</string>
    <string name="okay">OK</string>
    <string name="fault">Fehler</string>
    <string name="home">Heim</string>
    <string name="away">Auswärts</string>
    <string name="team">Mannschaft</string>
    <string name="teams">Mannschaften</string>
    <string name="team_edit">Mannschaft bearbeiten  </string>
    <string name="team_name">Mannschaftsname</string>
    <string name="team_short">Mannschaftskürzel</string>
    <string name="club_name">Vereinsname</string>
    <string name="club_short">Vereinsskürzel</string>
    <string name="team_home">Heimmannschaft</string>
    <string name="team_away">Auswärtsmannschaft</string>
    <string name="player_input">Eingabe von Spielern</string>
    <string name="player_manage">Spieler verwalten</string>
    <string name="player_import">Spieler importieren</string>
    <string name="player">Spieler</string>
    <string name="player_edit">Spieler bearbeiten</string>
    <string name="player_name">Spielername</string>
    <string name="player_statistic">Spielerstatistik</string>
    <string name="player_statistic_home">Spielerstatistik Heim</string>
    <string name="player_statistic_away">Spielerstatistik Auswärts</string>
    <string name="number">Rückennummer</string>
    <string name="position">Position</string>
    <string name="goalkeeper">Torwart</string>
    <string name="left_wing">Linksaußen</string>
    <string name="left_back">Rückraum links</string>
    <string name="center_back">Rückraum mitte</string>
    <string name="right_back">Rückraum rechts</string>
    <string name="right_wing">Rechtsaußen</string>
    <string name="pivot">Kreisläufer</string>
    <string name="goalkeeper_short">TW</string>
    <string name="left_wing_short">LA</string>
    <string name="left_back_short">RL</string>
    <string name="center_back_short">RM</string>
    <string name="right_back_short">RR</string>
    <string name="right_wing_short">RA</string>
    <string name="pivot_short">KL</string>
    <string name="game">Spiel</string>
    <string name="games">Spiele</string>
    <string name="game_edit">Spiel bearbeiten</string>
    <string name="date">Datum</string>
    <string name="game_halftime">Halbzeitlänge</string>
    <string name="game_statistic">Spielstatistik</string>
    <string name="game_fast">Schnelles Spiel</string>
    <string name="ticker">Ticker</string>
    <string name="ticker_call">Ticker aufrufen</string>
    <string name="ticker_edit">Ticker bearbeiten </string>
    <string name="input_goalarea">Eingabe der Wurfecke</string>
    <string name="shot_on_goal">Torwurf</string>
    <string name="miss">Fehlwurf</string>
    <string name="seven_miss">7m Fehlwurf</string>
    <string name="seven_goal">7m Tor</string>
    <string name="fb_goal">Tempogegenstoss Tor</string>
    <string name="fb_miss">Tempogegenstoss Fehlwurf</string>
    <string name="fb_goal_short">TG Tor</string>
    <string name="fb_miss_short">TG Fehlwurf</string>
    <string name="yellow_card">Gelbe Karte</string>
    <string name="yellow_cards">Gelbe Karten</string>
    <string name="two_minutes">Zwei Minuten</string>
    <string name="two_plus_two">Zwei plus Zwei Minuten</string>
    <string name="red_card">Rote Karte</string>
    <string name="red_cards">Rote Karten</string>
    <string name="substitution">Spielerwechsel</string>
    <string name="tech_fault">Technischer Fehler</string>
    <string name="tech_faults">Technische Fehler</string>
    <string name="tech_fault_define">Technischen Fehler definieren</string>
    <string name="lineup_home">Aufstellung Heimmannschaft</string>
    <string name="lineup_away">Aufstellung Auswärtsmannschaft</string>
    <string name="timeout">Auszeit </string>
    <string name="timeout_home">Auszeit Heimmannschaft</string>
    <string name="timeout_away">Auszeit Auswärtsmannschaft</string>
    <string name="goal">Tor</string>
    <string name="goals">Tore</string>
    <string name="throw_off">Anwurf</string>
    <string name="choose_team">Mannschaft wählen</string>
    <string name="action">Aktion</string>
    <string name="actions">Aktionen</string>
    <string name="turnover">Ballverlust</string>
    <string name="playing_time">Spielzeit</string>
    <string name="sub_in">Einwechselung</string>
    <string name="sub_out">Auswechselung</string>
    <string name="lineup">Aufstellung</string>
    <string name="back">Zurück </string>
    <string name="pro_version">Pro Version</string>
    <string name="goal_area">Wurfecke</string>
    <string name="throw_position">Wurfposition</string>
    <string name="goalkeeper_goal_against">Torwart Gegentor</string>
    <string name="seven_goal_against">7m Gegentor</string>
    <string name="fb_goal_against">TG Gegentor</string>
    <string name="gk_save">Gehalten</string>
    <string name="goalkeeper_save">Torwart gehalten</string>
    <string name="seven_save">7m gehalten</string>
    <string name="fb_save">TG gehalten</string>
    <string name="question_turnover">Ballverlust?</string>
    <string name="throw_position_choose">Wurfposition wählen</string>
    <string name="goalareaUULL">Oben links daneben</string>
    <string name="goalareaUUL">Oben links daneben</string>
    <string name="goalareaUUM">Oben mitte daneben</string>
    <string name="goalareaUUR">Oben rechts daneben</string>
    <string name="goalareaUURR">Oben rechts daneben</string>
    <string name="goalareaULL">Oben links daneben</string>
    <string name="goalareaUL">Oben links</string>
    <string name="goalareaUM">Oben mitte</string>
    <string name="goalareaUR">Oben rechts</string>
    <string name="goalareaURR">Oben rechts daneben</string>
    <string name="goalareaMLL">Mitte links daneben</string>
    <string name="goalareaML">Mitte links</string>
    <string name="goalareaMM">Mitte mitte</string>
    <string name="goalareaMR">Mitte rechts</string>
    <string name="goalareaMRR">Mitte rechts daneben</string>
    <string name="goalareaLLL">Unten links daneben</string>
    <string name="goalareaLL">Unten links</string>
    <string name="goalareaLM">Unten mitte</string>
    <string name="goalareaLR">Unten rechts</string>
    <string name="goalareaLRR">Unten rechts daneben </string>
    <string name="positionLW">Links außen </string>
    <string name="positionLB">Halb links</string>
    <string name="positionRW">Rechts außen </string>
    <string name="positionRB">Halb rechts </string>
    <string name="positionCB">Rückraum Mitte </string>
    <string name="statistic">Statistik</string>
    <string name="statistics">Statistiken</string>
    <string name="score_chart">Torschützenliste</string>
    <string name="goal_efficiency">Tor Effektivität</string>
    <string name="seven_efficiency">7m Effektivität</string>
    <string name="fb_efficiency">TG Effektivität</string>
    <string name="seven_goals">7m Tore</string>
    <string name="seven_total">7m Tore</string>
    <string name="fb_goals">TG Tore</string>
    <string name="fb_total">TG Gesamt</string>
    <string name="statistic_goals">Tore / 7m / TG</string>
    <string name="statistic_chances">Chancen / 7m / TG</string>
    <string name="statistic_efficiency">Effektivität / 7m / TG</string>
    <string name="throws_str">Würfe</string>
    <string name="seven_throws_str">7m Würfe</string>
    <string name="fb_throws_str">TG Würfe</string>
    <string name="halftime">Halbzeit</string>
    <string name="chances">Chancen</string>
    <string name="efficiency">Effektivität</string>
    <string name="tech_fault_short">Tech. Fehler</string>
    <string name="attacks">Angriffe</string>
    <string name="possession">Ballbesitz</string>
    <string name="time_attack">Zeit / Angriff</string>
    <string name="game_history">Spielverlauf</string>
    <string name="minutes">Minuten</string>
    <string name="lead">Führung</string>
    <string name="draw">Unentschieden</string>
    <string name="penalties">Strafen</string>
    <string name="powerplay">Überzahl</string>
    <string name="goals_powerplay">Tore Überzahl</string>
    <string name="goals_shorthanded">Tore Unterzahl</string>
    <string name="goals_short">T</string>
    <string name="attempts_short">V</string>
    <string name="efficiency_short">%</string>
    <string name="percentage">Quote</string>
    <string name="seven_percentage">7m Quote</string>
    <string name="fb_percentage">TG Quote</string>
    <string name="Sprungwurf_percentage">Sprungwurf Quote</string>
    <string name="Schlagwurf_percentage">Schlagwurf Quote</string>
    <string name="Laufwurf_percentage">Laufwurf Quote</string>
    <string name="Fallwurf_percentage">Fallwurf Quote</string>
    <string name="Hüftwurf_percentage">Hüftwurf Quote</string>
    <string name="kempa_percentage">Kempa Quote</string>
    <string name="Dreher_percentage">Dreher Quote</string>
    <string name="Heber_percentage">Heber Quote</string>
    <string name="Leger_percentage">Leger Quote</string>
    <string name="Abknickwurf_percentage">Abknickwurf Quote</string>
    <string name="throws_percentage">Torwürfe Quote</string>
    <string name="seven_throws_percentage">7m Torwürfe Quote</string>
    <string name="fb_throws_percentage">TG Torwürfe Quote</string>
    <string name="statistic_total">Gesamtstatistik</string>
    <string name="statistic_team">Teamstatistik</string>
    <string name="export_csv">Export in CSV-Datei</string>
    <string name="import_data">Daten aus Lite-Version einfügen</string>
    <string name="import_database">Datenbank importieren</string>
    <string name="export_database">Datenbank exportieren</string>
    <string name="import_export_title">Import/Export</string>
    <string name="text_game_fast">Möchtest Du ein Spiel vom Server laden oder ein Spiel  auf Deinem Gerät anlegen?</string>
    <string name="text_csv_error">Es ist ein Fehler aufgetreten. Der Export der CSV-Datei konnte nicht durchgeführt werden. Stelle sicher, dass der Ordner sdcard nicht schreibgeschützt ist.</string>
    <string name="text_csv_export_suceeded">CSV-Export erfolgreich</string>
    <string name="text_choose_position">Position wählen</string>
    <string name="text_notice_terms">Die Nutzungsbedingungen habe ich gelesen und erkläre mich mit ihnen einverstanden.</string>
    <string name="text_notice_privacy">Die Bestimmungen zum Datenschutz habe ich gelesen und erkläre mich mit ihnen einverstanden.</string>
    <string name="email_address">E-Mail Adresse</string>
    <string name="password_with_hint">Passwort (mind. 8 Zeichen)</string>
    <string name="synchro">Synchronisieren</string>
    <string name="merge">Verschmelzen</string>
    <string name="forename">Vorname</string>
    <string name="surename">Nachname</string>
    <string name="position_first">Position</string>
    <string name="position_second">2. Position</string>
    <string name="position_third">3. Position</string>
    <string name="input_depth">Eingabetiefe</string>
    <string name="game_data">Spieldaten</string>
    <string name="game_settings">Spieleinstellungen</string>
    <string name="versus_short">gg</string>
    <string name="cancel">Abbrechen</string>
    <string name="register">Registrieren</string>
    <string name="user_name">Username</string>
    <string name="confirm_password">Passwort bestätigen</string>
</resources>