<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@color/blue">

<LinearLayout 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:paddingLeft="18dp"
	android:paddingRight="18dp"
	android:orientation="vertical"
>
  
	<TextView 
	    android:text="@string/game_data" 
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:gravity="left|bottom"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18dip" 
        android:layout_marginBottom="9dip"
	/>
        
    <Button 
        android:id="@+id/game_date"
        android:background="@color/grey_dark"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:text="@string/date"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="18dip" 
    />	

	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="horizontal"
		android:layout_marginTop="18dip"
	>

		<EditText 
	    	android:id="@+id/game_halftime"
	    	android:inputType="phone"
	    	android:maxLength="2"
			android:layout_width="72dp"
        	android:layout_height="36dp"
        	android:paddingLeft="9dip"
        	android:textColor="@color/grey_dark"
        	android:textSize="18dp" 
        	android:background="@android:color/white"
		/>
	
		<TextView 
	    	android:text="@string/game_halftime" 
        	android:layout_width="fill_parent"
        	android:layout_height="36dp"
        	android:gravity="left|center"
        	android:textColor="@android:color/white"
        	android:textSize="18dip"
        	android:layout_marginLeft="9dp"
		/>
	
	</LinearLayout>

	<Button 
        android:id="@+id/team_home"
        android:background="@color/grey_dark"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:text="@string/home"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="18dip"
        android:layout_marginTop="18dip"
    />	
    
	<TextView 
	    android:text="@string/versus_short" 
        android:layout_width="fill_parent"
        android:layout_height="18dp"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="9dip" 
	/> 
	    
	<Button 
        android:id="@+id/team_away"
        android:background="@color/grey_dark"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:text="@string/away"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="18dip" 
    />
	
	<TextView 
	    android:text="@string/game_settings" 
        android:layout_width="fill_parent"
        android:layout_height="72dp"
        android:gravity="left|bottom"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18dip"
        android:layout_marginBottom="9dip"
	/>
	    
	<Button 
        android:id="@+id/input_depth"
        android:background="@color/grey_dark"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:text="@string/input_depth"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="18dip"
        android:layout_marginBottom="9dip"
    />
	
	<Button 
        android:id="@+id/synch"
        android:background="@color/grey_dark"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:text="@string/synchro"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="18dip"
        android:layout_marginBottom="9dip"
    />
	
	<Button 
        android:id="@+id/ticker"
        android:background="@color/orange"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:text="@string/ticker_call"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="18dip"
    />
	
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:layout_marginTop="54dp"
        android:layout_marginBottom="18dp"
    > 
        
        <TableRow
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" 
        >
        	
        	<Button 
        		android:id="@+id/save"
        		android:background="@color/grey_dark"
        		android:layout_width="fill_parent"
        		android:layout_height="36dp"
        		android:text="@string/save"
        		android:textColor="@android:color/white"
        		android:textSize="18dip"
        		android:textStyle="bold"
        		android:layout_weight="1"
        		android:layout_marginRight="10dp"
    		/>
        	
        	<Button 
        		android:id="@+id/delete"
        		android:background="@color/grey_dark"
        		android:layout_width="fill_parent"
        		android:layout_height="36dp"
        		android:text="@string/delete"
        		android:textColor="@android:color/white"
        		android:textSize="18dip"
        		android:textStyle="bold"
        		android:layout_weight="1"
        		android:layout_marginLeft="10dp"
    		/>
        
        </TableRow>
        
    </TableLayout>

</LinearLayout>
</ScrollView>