<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:background="@null"
	android:layout_height="wrap_content"
	android:paddingLeft="9dp"
	android:paddingRight="9dp"
	android:gravity="center_vertical"
	android:orientation="horizontal">
 
    <TextView
       	android:id="@+id/goal_name"
       	android:text="@string/player_name"
       	android:layout_width="0dp"
    	android:layout_weight="5"
    	android:layout_height="48dp"
     	android:gravity="center_vertical|left"
      	android:textColor="@android:color/white"
      	android:singleLine="true"
       	android:textSize="24dip"
       	android:textStyle="bold" />
        
    <TextView
  		android:id="@+id/goal_count"
  		android:text="@string/goals_short"
  		android:layout_width="0dp"
  		android:layout_height="48dp"
  		android:layout_weight="1"
  		android:textColor="@android:color/white"
    	android:gravity="center_vertical|center_horizontal"
    	android:textSize="24dip"
    	android:textStyle="bold" />    
    
    <TextView
  		android:id="@+id/goal_attempt"
  		android:text="@string/attempts_short"
  		android:layout_width="0dp"
  		android:layout_height="48dp"
  		android:layout_weight="1"
        android:textColor="@android:color/white"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="24dip"
        android:textStyle="bold" />
      	
	<TextView
  		android:id="@+id/goal_effective"
  		android:text="@string/efficiency_short"
  		android:layout_width="0dp"
  		android:layout_height="48dp"
  		android:layout_weight="2"
        android:textColor="@android:color/white"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="24dip"
        android:textStyle="bold" />
      	
</LinearLayout>