<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@color/blue"
>

<LinearLayout 
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:paddingLeft="18dp"
  android:paddingRight="18dp"
  android:orientation="vertical"
>
  
	<TextView 
	    android:text="@string/forename" 
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:gravity="left|bottom"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18dip" 
	/>

	<TableLayout
        android:layout_width="fill_parent"
        android:layout_height="36dp" 
        android:stretchColumns="0"
    > 
        
        <TableRow
        	android:layout_width="fill_parent"
        	android:layout_height="36dp" 
        >
    
			<EditText
		    	android:id="@+id/player_forename"
		    	android:inputType="textCapWords"
		    	android:layout_width="0dp"
    	    	android:layout_height="36dp"
	   	    	android:paddingLeft="9dip"
	        	android:textColor="@color/grey_dark"
    	    	android:textSize="18dp" 
				android:background="@android:color/white"
			/>
	
			<Button 
        		android:id="@+id/btn_delete_player_forename"
        		android:background="@drawable/delete"
        		android:layout_width="36dp"
        		android:layout_height="36dp"
    		/>	
	
		</TableRow>
        
    </TableLayout>
	
	<TextView 
	    android:text="@string/surename" 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="left|bottom"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18dip" 
	/>
	
	<TableLayout
        android:layout_width="fill_parent"
        android:layout_height="36dp" 
        android:stretchColumns="0"
    > 
        
        <TableRow
        	android:layout_width="fill_parent"
        	android:layout_height="36dp" 
        >
			
			<EditText
	    		android:id="@+id/player_surename"
	    		android:inputType="textCapWords"
	    		android:layout_width="0dp"
        		android:layout_height="36dp"
        		android:paddingLeft="9dip"
        		android:textColor="@color/grey_dark"
        		android:textSize="18dp" 
        		android:background="@android:color/white"
			/>
			
			<Button 
        		android:id="@+id/btn_delete_player_surename"
        		android:background="@drawable/delete"
        		android:layout_width="36dp"
        		android:layout_height="36dp"
    		/>
			
		</TableRow>
        
    </TableLayout>

	<TextView 
	    android:text="@string/number" 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="left|bottom"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18dip" 
	/>

	<LinearLayout
  		android:layout_width="fill_parent"
  		android:layout_height="36dp"
  		android:orientation="horizontal"
  		>
  		
		<EditText 
	    	android:id="@+id/player_number"
	    	android:inputType="phone"
	    	android:maxLength="2"
	    	android:layout_width="136dp"
        	android:layout_height="36dp"
        	android:paddingLeft="9dip"
        	android:textColor="@color/grey_dark"
        	android:textSize="18dp" 
        	android:background="@android:color/white"
		/>
		
		<Button 
        	android:id="@+id/btn_delete_player_number"
        	android:background="@drawable/delete"
        	android:layout_width="36dp"
        	android:layout_height="36dp"
    	/>
		
		<LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="36dp" 
        	android:orientation="vertical"
    	> 
    	
			<Button 
        		android:id="@+id/okay"
        		android:background="@drawable/btn_keyboard"
        		android:layout_width="45dp"
        		android:layout_height="36dp"
        		android:textSize="18dip" 
        		android:layout_gravity="right"
    		/>
			
		</LinearLayout>
		
	</LinearLayout>
	
	<TextView 
	    android:text="@string/team" 
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:gravity="left|bottom"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18dip" 
	/>

	<RelativeLayout
  		android:layout_width="fill_parent"
  		android:layout_height="36dp"
  		android:orientation="horizontal"
  		>
  		
	    <LinearLayout
	    	android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical"
			android:layout_marginRight="30dip"
		>	
	
			<TextView 
			    android:id="@+id/player_club"
				android:layout_width="fill_parent"
				android:layout_height="24dp"
				android:gravity="left|bottom"
				android:textColor="@android:color/white"
				android:maxLines="1"
				android:ellipsize="end"
				android:textSize="18dip"
			/>

			<TextView 
			    android:id="@+id/player_team"
				android:layout_width="fill_parent"
				android:layout_height="12dp"
				android:gravity="left|top"
				android:textColor="@android:color/white"
				android:maxLines="1"
				android:ellipsize="end"
				android:textSize="8dip"
			/>
	
		</LinearLayout>
		
		<LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="36dp" 
        	android:orientation="vertical"
        	android:layout_alignParentRight="true"
    	> 
    	
			<Button 
        		android:id="@+id/btn_choose_team"
        		android:background="@drawable/btn_next"
        		android:layout_width="45dp"
        		android:layout_height="36dp"
        		android:textSize="18dip" 
        		android:layout_gravity="right"
    		/>
			
		</LinearLayout>
		
	</RelativeLayout>
	
	<TextView 
	    android:text="@string/position_first" 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="left|bottom"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18dip" 
	/>
		
	<Spinner
        android:id="@+id/spinner_position_first"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:paddingLeft="9dip"
        android:textColor="@color/grey_dark"
        android:textSize="18dp" 
        android:background="@android:color/white"
        android:prompt="@string/text_choose_position" 
    />
	
	<TextView 
	    android:text="@string/position_second" 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="left|bottom"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18dip" 
	/>
		
	<Spinner
        android:id="@+id/spinner_position_second"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:paddingLeft="9dip"
        android:textColor="@color/grey_dark"
        android:textSize="18dp" 
        android:background="@android:color/white"
        android:prompt="@string/text_choose_position" 
    />
	
	<TextView 
	    android:text="@string/position_third" 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="left|bottom"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18dip" 
	/>
		
	<Spinner
        android:id="@+id/spinner_position_third"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:paddingLeft="9dip"
        android:textColor="@color/grey_dark"
        android:textSize="18dp" 
        android:background="@android:color/white"
        android:prompt="@string/text_choose_position" 
    />
	
	<Button 
        android:id="@+id/synch"
        android:background="@color/grey_dark"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:text="@string/synchro"
        android:textColor="@android:color/white"
        android:textSize="18dip" 
        android:layout_marginTop="36dp"
    />
	
	<Button 
        android:id="@+id/connect"
        android:background="@color/grey_dark"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:text="@string/merge"
        android:textColor="@android:color/white"
        android:textSize="18dip" 
        android:layout_marginTop="18dp"
    />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
    > 
        
        <TableRow
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content" 
        >
        	
        	<Button 
        		android:id="@+id/btn_save"
        		android:background="@color/grey_dark"
        		android:layout_width="fill_parent"
        		android:layout_height="36dp"
        		android:text="@string/save"
        		android:textColor="@android:color/white"
        		android:textSize="18dip" 
        		android:layout_weight="1"
        		android:layout_marginRight="10dp"
    		/>
        	
        	<Button 
        		android:id="@+id/btn_delete"
        		android:background="@color/grey_dark"
        		android:layout_width="fill_parent"
        		android:layout_height="36dp"
        		android:text="@string/delete"
        		android:textColor="@android:color/white"
        		android:textSize="18dip" 
        		android:layout_weight="1"
        		android:layout_marginLeft="10dp"
    		/>
        
        </TableRow>
        
    </TableLayout>

</LinearLayout>
</ScrollView>